user apis and seeder
